2025-07-24  Jacob Bachmeyer  <jcb@gnu.org>

	PR79077

	Thanks to Marc Nieper-Wisskirchen for reporting this oversight.

	* doc/dejagnu.texi (DejaGnu unit test protocol): Document use of
	UNRESOLVED to report failed unit test programs.

	* lib/dejagnu.exp (host_execute): Emit UNRESOLVED result if unit
	test program exits without producing an end marker.  Previously,
	only a warning was produced.

	* testsuite/runtest.main/stats.exp: Add unit "bailout" tests.
	* testsuite/runtest.main/nested/testsuite/stat.test/unit-sub.awk:
	Add "bailout" mode for simulating a unit test program that crashes
	instead of producing output.

2024-10-20  Jacob Bachmeyer  <jcb@gnu.org>

	PR73907

	* doc/dejagnu.texi (Writing a test case): Fix typo reported by
	Heiko Eissfeldt.

2024-09-23  Jacob Bachmeyer  <jcb@gnu.org>

	* commands/report-card.awk: When preparing to compute totals and
	setting $0 to the list of possible test results, explicitly set NF
	to 9 to work around a bug in AIX 7.1 awk, which fails to update NF
	when $0 is assigned from a constant string.

2024-09-18  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Adapt Zsh compatibility prologue from configure.
	* runtest: Likewise.

2024-09-17  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Search for a POSIX shell for commands implemented as
	shell scripts instead of expecting commands to run with /bin/sh.
	This allows command scripts to assume a POSIX shell from now on.

	* dejagnu: Improve search for Awk interpreter using POSIX
	command(1) utility to search paths.  Also use POSIX getconf(1) to
	obtain a standard system PATH that should contain POSIX versions
	of various utilities; this enables finding POSIX Awk on Solaris 10.

	* dejagnu: Quote "$verbose" when incrementing verbosity counter to
	resolve shellcheck warning.
	* runtest: Likewise.

	* dejagnu: Fix minor bug in extraction of help messages from
	auxiliary tools.

2024-09-16  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/lib/launcher.exp (dejagnu_run): Add support for