@@ -69,8 +69,6 @@ set tests {
     { unit 1 0 fail "unresolved testcases\[ \t\]+1\n" }
     { unit 1 0 xpass "unresolved testcases\[ \t\]+1\n" }
     { unit 1 0 xfail "unresolved testcases\[ \t\]+1\n" }
-    { unit 1 0 kpass "unresolved testcases\[ \t\]+1\n" }
-    { unit 1 0 kfail "unresolved testcases\[ \t\]+1\n" }
     { unit 1 0 untested "unresolved testcases\[ \t\]+1\n" }
     { unit 1 0 unresolved "unresolved testcases\[ \t\]+1\n" }
     { unit 1 0 unsupported "unresolved testcases\[ \t\]+1\n" }
@@ -79,8 +77,6 @@ set tests {
     { unit 0 4 fail "unresolved testcases\[ \t\]+1\n" }
     { unit 0 4 xpass "unresolved testcases\[ \t\]+1\n" }
     { unit 0 4 xfail "unresolved testcases\[ \t\]+1\n" }
-    { unit 0 4 kpass "unresolved testcases\[ \t\]+1\n" }
-    { unit 0 4 kfail "unresolved testcases\[ \t\]+1\n" }
     { unit 0 4 untested "unresolved testcases\[ \t\]+1\n" }
     { unit 0 4 unresolved "unresolved testcases\[ \t\]+1\n" }
     { unit 0 4 unsupported "unresolved testcases\[ \t\]+1\n" }
@@ -92,7 +88,7 @@ foreach t $tests {
 		ERROR_COUNT=[lindex $t 1] WARNING_COUNT=[lindex $t 2]\
 		STATS_TEST=[lindex $t 3] [lindex $t 0]-sub.exp" \
 	    "" \
-	    [lindex $t 2]] } {
+	    [lindex $t 4]] } {
 	fail [join [lrange $t 0 3] /]
 	runtest_copy_nested_testsuite_log stat
     } else {
